fix, now that I'm using

--- a/public/Nav.css
+++ b/public/Nav.css
@@ -49,6 +49,11 @@ nav #navOpenSide {
     float: right;
 }
 
+nav #navSide a{
+    display: block;
+    text-align: left;
+}
+
 nav #navSideClose::after{
     content: 'Close \00d7';
 }
