--- a/components/ComingSoon.css
+++ b/components/ComingSoon.css
@@ -1,12 +1,8 @@
 /* css here */
 
-body,
-h1 {
+section#main h1,
+section#main h2 {
   font-family: 'Raleway', sans-serif;
-}
-
-html {
-  height: 100%;
 }
 
 section#main {
@@ -21,14 +17,14 @@ section#main {
   background-color: transparent;
 }
 
-h1{
+section#main h1{
   font-size: 64px;
   position: relative;
   animation: animatetop .4s;
   text-align: center;
 }
 
-main .w3-border-grey {
+section#main .w3-border-grey {
   margin: auto;
   width: 40%;
 }
